--- a/index.html
+++ b/index.html
@@ -316,7 +316,7 @@
 					<div class="place img" style="background-image: url(images/place-1.jpg);">
 						<div class="text text-center">
 							<span class="icon flaticon-reception-bell"></span>
-							<h3>Callejoneada</h3>
+							<h3 class="dorado-letras">Callejoneada</h3>
 							<p><span>Jueves 10 de febrero 2022</span><br><span>16:00</span></p>
 							<p><span>Parque Juárez, San Miguel de Allende</span></p> <br>
 							<p><a href="https://goo.gl/maps/tP6oUn6Eoaet8cLGA" class="btn-custom">Ver ubicación</a></p>
@@ -327,7 +327,7 @@
 					<div class="place img" style="background-image: url(images/place-2.jpg);">
 						<div class="text text-center">
 							<span class="icon flaticon-wedding-kiss"></span>
-							<h3>Ceremonia</h3>
+							<h3 class="dorado-letras">Ceremonia</h3>
 							<p><span>Sábado 12 de febrero 2022</span><br><span>17:00</span></p>
 							<p><span>Iglesia San Miguel Arcángel</span></p> <br>
 							<p><a href="#" class="btn-custom">Ver ubicación</a></p><br>
@@ -338,7 +338,7 @@
 					<div class="place img" style="background-image: url(images/place-3.jpg);">
 						<div class="text text-center">
 							<span class="icon flaticon-cake"></span>
-							<h3>Recepción</h3>
+							<h3 class="dorado-letras">Recepción</h3>
 							<p><span>Sábado 12 de febrero 2022</span><br><span>19:15</span></p>
 							<p><span>Carretera San Miguel - Dolores 5.4km, 37700 San Miguel de Allende, Gto.</span></p> 
 							<p><a href="#" class="btn-custom">Ver ubicación</a></p>
