--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 	</nav>
 
 	<section id="home" class="video-hero js-fullheight"
-		style="height: 700px; background-image: url(images/bg_1.jpg); background-size:cover; background-position: top center;"
+		style="height: 700px; background-image: url(images/E&S-64.jpg); background-size:cover; background-position: top center;"
 		data-stellar-background-ratio="0.5">
 		<div class="overlay"></div>
 		<!-- 			<a class="player" data-property="{videoURL:'https://www.youtube.com/watch?v=Mjjw19B7rMk',containment:'#home', showControls:false, autoPlay:true, loop:true, mute:true, startAt:0, opacity:1, quality:'default',optimizeDisplay:true}"></a>
@@ -83,7 +83,7 @@
 						<div class="row d-flex">
 							<div class="col-md-6 d-flex">
 								<div class="img d-flex align-self-stretch align-items-center"
-									style="background-image:url(images/about.jpg);">
+									style="background-image:url(images/E&S-59.jpg);">
 								</div>
 							</div>
 							<div class="col-md-6 py-md-5 text">
@@ -118,7 +118,7 @@
 			<div class="row justify-content-center pb-5">
 				<div class="col-md-12 text-center heading-section ftco-animate">
 					<span class="clone">Novio &amp; Novia</span>
-					<h2 class="mb-3">Novio &amp; Novia</h2>
+					<h2 class="mb-3">Novia &amp; Novio</h2>
 				</div>
 			</div>
 			<div class="row justify-content-center">
@@ -126,18 +126,18 @@
 					<div class="row">
 						<div class="col-md-6 text-center d-flex align-items-stretch">
 							<div class="bride-groom ftco-animate">
-								<div class="img" style="background-image: url(images/groom.jpg);"></div>
+								<div class="img" style="background-image: url(images/bride.jpg);"></div>
 								<div class="text mt-4 px-4">
-									<h2 class="dorado-letras">Gumaro Patiño</h2>
+									<h2 class="dorado-letras">Eva Valencia</h2>
 									<p>Descripción</p>
 								</div>
 							</div>
 						</div>
 						<div class="col-md-6 text-center d-flex align-items-stretch">
 							<div class="bride-groom ftco-animate">
-								<div class="img" style="background-image: url(images/bride.jpg);"></div>
+								<div class="img" style="background-image: url(images/groom.jpg);"></div>
 								<div class="text mt-4 px-4">
-									<h2 class="dorado-letras">Eva Valencia</h2>
+									<h2 class="dorado-letras">Gumaro Patiño</h2>
 									<p>Descripción</p>
 								</div>
 							</div>
@@ -360,33 +360,33 @@
 			</div>
 			<div class="row">
 				<div class="col-md-3 ftco-animate">
-					<a href="images/gallery-1.jpg"
+					<a href="images/E&S-31.jpg"
 						class="gallery img image-popup d-flex align-items-center justify-content-center"
-						style="background-image: url(images/gallery-1.jpg);">
+						style="background-image: url(images/E&S-31.jpg);">
 						<div class="icon d-flex align-items-center justify-content-center"><span
 								class="ion-ios-image"></span></div>
 					</a>
 				</div>
 				<div class="col-md-3 ftco-animate">
-					<a href="images/gallery-2.jpg"
+					<a href="images/foto44.jpg"
 						class="gallery img image-popup d-flex align-items-center justify-content-center"
-						style="background-image: url(images/gallery-2.jpg);">
+						style="background-image: url(images/foto44.jpg);">
 						<div class="icon d-flex align-items-center justify-content-center"><span
 								class="ion-ios-image"></span></div>
 					</a>
 				</div>
 				<div class="col-md-3 ftco-animate">
-					<a href="images/gallery-3.jpg"
+					<a href="images/E&S-59.jpg"
 						class="gallery img image-popup d-flex align-items-center justify-content-center"
-						style="background-image: url(images/gallery-3.jpg);">
+						style="background-image: url(images/E&S-59.jpg);">
 						<div class="icon d-flex align-items-center justify-content-center"><span
 								class="ion-ios-image"></span></div>
 					</a>
 				</div>
 				<div class="col-md-3 ftco-animate">
-					<a href="images/gallery-4.jpg"
+					<a href="images/E&S-64.jpg"
 						class="gallery img image-popup d-flex align-items-center justify-content-center"
-						style="background-image: url(images/gallery-4.jpg);">
+						style="background-image: url(images/E&S-64.jpg);">
 						<div class="icon d-flex align-items-center justify-content-center"><span
 								class="ion-ios-image"></span></div>
 					</a>
