--- a/index.html
+++ b/index.html
@@ -39,8 +39,7 @@
 				<ul class="navbar-nav nav ml-auto">
 					<li class="nav-item"><a href="#home-section" class="nav-link"><span>Home</span></a></li>
 					<li class="nav-item"><a href="#groom-bride-section" class="nav-link"><span>Invitación</span></a></li>
-					<li class="nav-item"><a href="#lovestory-section" class="nav-link"><span>Itinerario</span></a></li> 
-					<li class="nav-item"><a href="#people-section" class="nav-link"><span>Personas</span></a></li>
+					<li class="nav-item"><a href="#lovestory-section" class="nav-link"><span>Itinerario</span></a></li>  
 					<li class="nav-item"><a href="#when-where-section" class="nav-link"><span>Ubicación</span></a></li> 
 					<li class="nav-item"><a href="#gallery-section" class="nav-link"><span>Galería</span></a></li>
 				</ul>
@@ -232,7 +231,7 @@
 	</section>
 
 
-	<section class="ftco-section" id="people-section">
+	<!-- <section class="ftco-section" id="people-section">
 		<div class="container-fluid px-md-5">
 			<div class="row justify-content-center pb-5">
 				<div class="col-md-12 text-center heading-section ftco-animate">
@@ -301,7 +300,7 @@
 				</div>
 			</div>
 		</div>
-	</section>
+	</section> -->
 
 	<section class="ftco-section" id="when-where-section">
 		<div class="container">
