Some changes were made
-New images on gallery section.
-New "hospedaje" page was added.
-Links to maps were added to "ubicaciones" section.
-Some unused files were deleted

--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
 					<li class="nav-item"><a href="#lovestory-section" class="nav-link"><span>Itinerario</span></a></li>  
 					<li class="nav-item"><a href="#when-where-section" class="nav-link"><span>Ubicación</span></a></li> 
 					<li class="nav-item"><a href="#gallery-section" class="nav-link"><span>Galería</span></a></li>
+					<li class="nav-item"><a href="hospedaje" class="nav-link"><span>Hospedaje</span></a></li>
 				</ul>
 			</div>
 		</div>
@@ -51,8 +52,6 @@
 		style="height: 700px; background-image: url(images/E&S-64.jpg); background-size:cover; background-position: top center;"
 		data-stellar-background-ratio="0.5">
 		<div class="overlay"></div>
-		<!-- 			<a class="player" data-property="{videoURL:'https://www.youtube.com/watch?v=Mjjw19B7rMk',containment:'#home', showControls:false, autoPlay:true, loop:true, mute:true, startAt:0, opacity:1, quality:'default',optimizeDisplay:true}"></a>
- -->
 		<div class="container">
 			<div class="row js-fullheight justify-content-center d-flex align-items-center">
 				<div class="col-md-12">
@@ -159,7 +158,7 @@
 				<div class="col-md-12">
 					<ul class="timeline animate-box">
 						<li class="animate-box">
-							<div class="timeline-badge" style="background-image:url(images/couple-1.jpg);"></div>
+							<div class="timeline-badge" style="background-image:url(images/callejoneada1.jpg);"></div>
 							<div class="timeline-panel ftco-animate text-md-right">
 								<div class="overlay"></div>
 								<div class="timeline-heading">
@@ -173,7 +172,7 @@
 							</div>
 						</li>
 						<li class="timeline-inverted animate-box">
-							<div class="timeline-badge" style="background-image:url(images/couple-2.jpg);"></div>
+							<div class="timeline-badge" style="background-image:url(images/parroquia2.jpg);"></div>
 							<div class="timeline-panel ftco-animate">
 								<div class="overlay overlay-2"></div>
 								<div class="timeline-heading">
@@ -186,7 +185,7 @@
 							</div>
 						</li>
 						<li class="animate-box">
-							<div class="timeline-badge" style="background-image:url(images/couple-3.jpg);"></div>
+							<div class="timeline-badge" style="background-image:url(images/coctel1.jpg);"></div>
 							<div class="timeline-panel ftco-animate text-md-right">
 								<div class="overlay"></div>
 								<div class="timeline-heading">
@@ -199,7 +198,7 @@
 							</div>
 						</li>
 						<li class="timeline-inverted animate-box">
-							<div class="timeline-badge" style="background-image:url(images/couple-4.jpg);"></div>
+							<div class="timeline-badge" style="background-image:url(images/coctel2.jpg);"></div>
 							<div class="timeline-panel ftco-animate">
 								<div class="overlay overlay-2"></div>
 								<div class="timeline-heading">
@@ -212,7 +211,7 @@
 							</div>
 						</li>
 						<li class="animate-box">
-							<div class="timeline-badge" style="background-image:url(images/couple-3.jpg);"></div>
+							<div class="timeline-badge" style="background-image:url(images/gallery-7.jpg);"></div>
 							<div class="timeline-panel ftco-animate text-md-right">
 								<div class="overlay"></div>
 								<div class="timeline-heading">
@@ -229,79 +228,6 @@
 			</div>
 		</div>
 	</section>
-
-
-	<!-- <section class="ftco-section" id="people-section">
-		<div class="container-fluid px-md-5">
-			<div class="row justify-content-center pb-5">
-				<div class="col-md-12 text-center heading-section ftco-animate">
-					<span class="clone">Personas</span>
-					<h2 class="mb-3">Familia &amp; Amigos</h2>
-				</div>
-			</div>
-			<div class="row">
-				<div class="col-md-12">
-					<div class="carousel-friends owl-carousel ftco-owl ftco-animate">
-						<div class="item">
-							<div class="people text-center">
-								<div class="img" style="background-image: url(images/groom-men-1.jpg);"></div>
-								<div class="text">
-									<h3 class="dorado-letras">Sandra Ruiz</h3>
-									<span>Madre de la novia</span>
-								</div>
-							</div>
-						</div>
-						<div class="item">
-							<div class="people text-center">
-								<div class="img" style="background-image: url(images/groom-men-2.jpg);"></div>
-								<div class="text">
-									<h3 class="dorado-letras">Luis Valencia</h3>
-									<span>Padre de la novia</span>
-								</div>
-							</div>
-						</div>
-						<div class="item">
-							<div class="people text-center">
-								<div class="img" style="background-image: url(images/groom-men-3.jpg);"></div>
-								<div class="text">
-									<h3 class="dorado-letras">Eva Hernández</h3>
-									<span>Madre del novio</span>
-								</div>
-							</div>
-						</div>
-						<div class="item">
-							<div class="people text-center">
-								<div class="img" style="background-image: url(images/groom-men-4.jpg);"></div>
-								<div class="text">
-									<h3 class="dorado-letras">Rafael Patiño</h3>
-									<span>Padre del novio</span>
-								</div>
-							</div>
-						</div>
-						<div class="item">
-							<div class="people text-center">
-								<div class="img" style="background-image: url(images/bridesmaid-1.jpg);"></div>
-								<div class="text">
-									<h3 class="dorado-letras">Laura Correa</h3>
-									<span>Madrina de velación</span>
-								</div>
-							</div>
-						</div>
-						<div class="item">
-							<div class="people text-center">
-								<div class="img" style="background-image: url(images/bridesmaid-2.jpg);"></div>
-								<div class="text">
-									<h3 class="dorado-letras">Juan Correa</h3>
-									<span>Padrino de velación</span>
-								</div>
-							</div>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-	</section> -->
-
 	<section class="ftco-section" id="when-where-section">
 		<div class="container">
 			<div class="row justify-content-center pb-5">
@@ -312,13 +238,13 @@
 			</div>
 			<div class="row">
 				<div class="col-md-4 ftco-animate">
-					<div class="place img" style="background-image: url(images/place-1.jpg);">
+					<div class="place img" style="background-image: url(images/callejoneada1.jpg);">
 						<div class="text text-center">
 							<span class="icon flaticon-reception-bell"></span>
 							<h3 class="dorado-letras">Callejoneada</h3>
 							<p><span>Jueves 10 de febrero 2022</span><br><span>16:00</span></p>
 							<p><span>Parque Juárez, San Miguel de Allende</span></p> <br>
-							<p><a href="https://goo.gl/maps/tP6oUn6Eoaet8cLGA" class="btn-custom">Ver ubicación</a></p>
+							<p><a href="https://goo.gl/maps/tP6oUn6Eoaet8cLGA" target="_blank" class="btn-custom">Ver ubicación</a></p>
 						</div>
 					</div>
 				</div>
@@ -329,7 +255,7 @@
 							<h3 class="dorado-letras">Ceremonia</h3>
 							<p><span>Sábado 12 de febrero 2022</span><br><span>17:00</span></p>
 							<p><span>Iglesia San Miguel Arcángel</span></p> <br>
-							<p><a href="#" class="btn-custom">Ver ubicación</a></p><br>
+							<p><a href="https://goo.gl/maps/uDV9QCfdvgj6bmBk8" target="_blank" class="btn-custom">Ver ubicación</a></p><br>
 						</div>
 					</div>
 				</div>
@@ -340,7 +266,7 @@
 							<h3 class="dorado-letras">Recepción</h3>
 							<p><span>Sábado 12 de febrero 2022</span><br><span>19:15</span></p>
 							<p><span>Carretera San Miguel - Dolores 5.4km, 37700 San Miguel de Allende, Gto.</span></p> 
-							<p><a href="#" class="btn-custom">Ver ubicación</a></p>
+							<p><a href="https://goo.gl/maps/oRnZiNwEfwyG5kkk7" target="_blank" class="btn-custom">Ver ubicación</a></p>
 						</div>
 					</div>
 				</div>
@@ -391,33 +317,69 @@
 					</a>
 				</div>
 				<div class="col-md-3 ftco-animate">
-					<a href="images/gallery-5.jpg"
+					<a href="images/parroquia1.jpg"
 						class="gallery img image-popup d-flex align-items-center justify-content-center"
-						style="background-image: url(images/gallery-5.jpg);">
+						style="background-image: url(images/parroquia1.jpg);">
 						<div class="icon d-flex align-items-center justify-content-center"><span
 								class="ion-ios-image"></span></div>
 					</a>
 				</div>
 				<div class="col-md-3 ftco-animate">
-					<a href="images/gallery-6.jpg"
+					<a href="images/parroquia2.jpg"
 						class="gallery img image-popup d-flex align-items-center justify-content-center"
-						style="background-image: url(images/gallery-6.jpg);">
+						style="background-image: url(images/parroquia2.jpg);">
 						<div class="icon d-flex align-items-center justify-content-center"><span
 								class="ion-ios-image"></span></div>
 					</a>
 				</div>
 				<div class="col-md-3 ftco-animate">
-					<a href="images/gallery-7.jpg"
+					<a href="images/parroquia3.jpg"
 						class="gallery img image-popup d-flex align-items-center justify-content-center"
-						style="background-image: url(images/gallery-7.jpg);">
+						style="background-image: url(images/parroquia3.jpg);">
 						<div class="icon d-flex align-items-center justify-content-center"><span
 								class="ion-ios-image"></span></div>
 					</a>
 				</div>
 				<div class="col-md-3 ftco-animate">
-					<a href="images/gallery-8.jpg"
+					<a href="images/coctel2.jpg"
 						class="gallery img image-popup d-flex align-items-center justify-content-center"
-						style="background-image: url(images/gallery-8.jpg);">
+						style="background-image: url(images/coctel2.jpg);">
+						<div class="icon d-flex align-items-center justify-content-center"><span
+								class="ion-ios-image"></span></div>
+					</a>
+				</div>
+
+				
+
+
+				<div class="col-md-3 ftco-animate">
+					<a href="images/rancho1.jpg"
+						class="gallery img image-popup d-flex align-items-center justify-content-center"
+						style="background-image: url(images/rancho1.jpg);">
+						<div class="icon d-flex align-items-center justify-content-center"><span
+								class="ion-ios-image"></span></div>
+					</a>
+				</div>
+				<div class="col-md-3 ftco-animate">
+					<a href="images/rancho2.jpg"
+						class="gallery img image-popup d-flex align-items-center justify-content-center"
+						style="background-image: url(images/rancho2.jpg);">
+						<div class="icon d-flex align-items-center justify-content-center"><span
+								class="ion-ios-image"></span></div>
+					</a>
+				</div>
+				<div class="col-md-3 ftco-animate">
+					<a href="images/rancho3.jpeg"
+						class="gallery img image-popup d-flex align-items-center justify-content-center"
+						style="background-image: url(images/rancho3.jpeg);">
+						<div class="icon d-flex align-items-center justify-content-center"><span
+								class="ion-ios-image"></span></div>
+					</a>
+				</div>
+				<div class="col-md-3 ftco-animate">
+					<a href="images/rancho4.jpeg"
+						class="gallery img image-popup d-flex align-items-center justify-content-center"
+						style="background-image: url(images/rancho4.jpeg);">
 						<div class="icon d-flex align-items-center justify-content-center"><span
 								class="ion-ios-image"></span></div>
 					</a>
